<resources>
    <string name="app_name">App1_105590019</string>
    <string name="gradeText">成績:</string>
    <string name="output">等第:</string>
    <string name="x">輸入錯誤</string>
    <string name="a"> = A</string>
    <string name="b"> = B</string>
    <string name="c"> = C</string>
    <string name="d"> = D</string>
    <string name="f"> = F</string>
    <string name="inputGrade">輸入整數成績</string>
    <string name="inputgrade">輸入整數成績</string>
    <string name="btnOK">成績轉換</string>
</resources>
